fix: header visibility search and button fixed

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -132,6 +132,7 @@
 
   &--cart {
     display: flex;
+    white-space: nowrap;
     align-items: center;
     line-height: 23px;
     padding: 12px 25px;
